FRONT index html - CSS: añadido background-image y google fonts

--- a/front/public/index.html
+++ b/front/public/index.html
@@ -7,6 +7,36 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <link rel="stylesheet" href="<%= BASE_URL %>css/style.css" />
     <title>Cadena de favores</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Anton&display=swap"
+      rel="stylesheet"
+    />
+    <style scoped>
+      #app {
+        min-height: 100vh;
+        margin: 0;
+        padding: 0;
+      }
+      body {
+        background-image: linear-gradient(60deg, #b16ec4, #5f97b9);
+
+        /* 
+        background-image: linear-gradient(60deg, #d3b7db, white);
+        */
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center center;
+
+        /* Full height */
+        height: 100%;
+
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+      }
+    </style>
   </head>
   <body>
     <noscript>
