--- a/front/public/index.html
+++ b/front/public/index.html
@@ -20,9 +20,11 @@
         padding: 0;
       }
       body {
-        background-image: linear-gradient(60deg, #b16ec4, #5f97b9);
+        background-image: linear-gradient(60deg, #d3b7db, white);
 
         /* 
+                background-image: linear-gradient(60deg, #b16ec4, #5f97b9);
+
         background-image: linear-gradient(60deg, #d3b7db, white);
         */
         background-repeat: no-repeat;
