FRONT index html - añadido google fonts

--- a/front/public/index.html
+++ b/front/public/index.html
@@ -13,6 +13,10 @@
       href="https://fonts.googleapis.com/css2?family=Anton&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap"
+      rel="stylesheet"
+    />
     <style scoped>
       #app {
         min-height: 100vh;
@@ -20,12 +24,19 @@
         padding: 0;
       }
       body {
-        background-image: linear-gradient(60deg, #d3b7db, white);
+        background-image: linear-gradient(60deg, #f3ebf3e4, white);
 
         /* 
+         background-image: url("");
+        https://img.freepik.com/free-vector/abstract-banner-with-low-poly-plexus-network-communications-design_1048-12914.jpg?t=st=1656272153~exp=1656272753~hmac=9062f221dadc01e9fac03b3f7ed465549088badaedf3dae5343ccf7a9414d1c9&w=740
+        concepto NET
+        https://img.freepik.com/free-vector/illustration-connecting-people-communication-concept-social-network_302149-38.jpg?w=740
+
+        https://www.freepik.com/premium-vector/illustration-connecting-people-communication-concept-social-network_10540068.htm#query=net&position=44&from_view=search
+        https://media.gettyimages.com/photos/aerial-view-of-crowd-connected-by-lines-picture-id1180187740?s=2048x2048
                 background-image: linear-gradient(60deg, #b16ec4, #5f97b9);
 
-        background-image: linear-gradient(60deg, #d3b7db, white);
+       
         */
         background-repeat: no-repeat;
         background-size: cover;
